<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_scroll"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DuvidasFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:id="@+id/layout1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="24dp"
                android:backgroundTint="@null"
                android:fontFamily="@font/poppins"
                android:text="Dúvidas Frequentes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26dp" />

            <androidx.cardview.widget.CardView
               android:id="@+id/card1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="20dp"
               app:cardCornerRadius="20dp"
               app:cardElevation="10dp"
               app:contentPadding="20dp"
                android:backgroundTint="#94162C"
                android:background="@drawable/button_shape">

                <TextView
                    android:id="@+id/recuperar_senha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/duvida1"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:visibility="gone"
                    android:text="@string/resposta1"
                    android:textSize="14dp"
                    android:fontFamily="@font/poppins"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp"
                android:backgroundTint="#94162C"
                android:background="@drawable/button_shape">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/duvida2"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/details2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/resposta2"
                    android:textSize="14dp"
                    android:visibility="gone" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp"
                android:backgroundTint="#94162C"
                android:background="@drawable/button_shape">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/duvida3"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/details3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:visibility="gone"
                    android:text="@string/resposta3"
                    android:textSize="14dp"
                    android:fontFamily="@font/poppins"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
</ScrollView>
